# origin

./: .travis.yml  .travis.yml.in  CMakeLists.txt  README.md  appveyor.yml  bintray.json.in  build.sh  deploy.sh  main.cpp  package.json  tutorial.h.in
MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cpp
